<resources>
    <string name="app_name" translatable="false">Instaflux</string>
    <string name="sign_in">Sign In</string>
    <string name="trust_certificate_question">Do you want to trust the following certificate?</string>
    <string name="title">Title</string>
    <string name="post">Post</string>
    <string name="create_post">Create Post</string>
    <string name="content">Content</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="xmlrpc_url">XMLRPC Url</string>

    <string name="error_no_title_or_content">Empty title or content</string>
    <string name="error_empty_username">Username is required</string>
    <string name="error_empty_password">Password is required</string>
    <string name="image_post">Image Post</string>
</resources>
